service-mesh/yamls/istio-system/ra.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: requestauthentication
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "http://keycloak.mesh.onap.eu/auth/realms/testing"
    jwksUri: "http://keycloak.mesh.onap.eu/auth/realms/testing/protocol/openid-connect/certs"
